kubernetes/apps/monitoring/lynq/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lynq
  namespace: lynq-system
spec:
  hostnames: ["lynq.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: lynq-dashboard
          port: 80
